# teh-mogul-bot

./: Cargo.toml  README.md  env.sample  shell.nix
src/: main.rs
src/commands/: mod.rs  waifu.rs
